# kube-mcp-operator

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
charts/mcp-operator/: Chart.yaml  values.yaml
charts/mcp-operator/templates/: crd.yaml  deployment.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
mcp_operator/: __init__.py  mcp_operator.py
operator/: Dockerfile  crd.yaml
scripts/: bump_version.py  update_changelog.py  validate_commit_msg.py
sidecar/: Dockerfile  main.py
tests/: test_operator.py  test_operator_extra.py  test_sidecar.py
