[project]
name = "kube-mcp-operator"
version = "0.1.0"
description = "MCP operator and sidecar"
authors = ["Phang <phang98@users.noreply.github.com>"]
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "kopf",
    "kubernetes",
    "pyyaml"
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
